build.log
[ 27%] Built target bignum
[ 36%] Building CXX object CMakeFiles/lanczos.dir/src/lanczos.cpp.obj
D:\DC\program-projects\C++\Lanczos-Approximation\src\lanczos.cpp: In function 'std::vector<BigFloat> compute_lanczos_coefficients(int, const std::string&, int)':
D:\DC\program-projects\C++\Lanczos-Approximation\src\lanczos.cpp:194:14: error: redeclaration of 'BigFloat bf_g'
  194 |     BigFloat bf_g(g, work_bits);
      |              ^~~~
D:\DC\program-projects\C++\Lanczos-Approximation\src\lanczos.cpp:70:14: note: 'BigFloat bf_g' previously declared here
   70 |     BigFloat bf_g = BigFloat::from_string(g_str, work_bits);
      |              ^~~~
D:\DC\program-projects\C++\Lanczos-Approximation\src\lanczos.cpp:194:19: error: 'g' was not declared in this scope
  194 |     BigFloat bf_g(g, work_bits);
      |                   ^
mingw32-make[2]: *** [CMakeFiles\lanczos.dir\build.make:79: CMakeFiles/lanczos.dir/src/lanczos.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:130: CMakeFiles/lanczos.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
